fix: remove jumping send button and clear message input when selecting new user

--- a/fun-chat/src/ts/view/chat/content/content-view.scss
+++ b/fun-chat/src/ts/view/chat/content/content-view.scss
@@ -6,5 +6,4 @@
   padding: 10px;
   box-sizing: border-box;
   margin: 20px;
-  height: 70vh;
 }
