--- a/fun-chat/src/ts/view/chat/footer/footer-view.scss
+++ b/fun-chat/src/ts/view/chat/footer/footer-view.scss
@@ -7,10 +7,6 @@
   padding: 10px;
   box-sizing: border-box;
   margin: 20px 20px 0;
-  height: 10vh;
-  @media screen and (max-width: 800px) {
-    height: 7vh;
-  }
   &__logo {
     width: 20px;
     height: 20px;
